<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:met_floatingLabel="highlight"
        android:hint="@string/hint_email_user"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:textSize="@dimen/md_content_textsize" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="highlight"
        android:hint="@string/hint_name_user"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_below="@+id/email"
        android:textSize="@dimen/md_content_textsize" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_floatingLabel="highlight"
        android:hint="@string/hint_postcode_user"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_below="@+id/name"
        android:textSize="@dimen/md_content_textsize" />
    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/postcode"
        android:layout_alignParentRight="true" />
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account already exists"
        android:textSize="@dimen/md_content_textsize"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/email"
         />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_centerInParent="true" />

</RelativeLayout>