<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/zippy_bakground">


    <FrameLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="@color/theme_primary"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            android:minWidth="192dp"
            android:text="How it works"
            />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:drawablePadding="28dp"
            android:gravity="center_vertical"
            android:text="Join our FREE rewards program"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"/>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_steps"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@android:color/white"
        android:layout_below="@+id/layout_title"
        >

        <TextView
            android:id="@+id/lbl_step1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="32dp"
            android:drawableLeft="@drawable/ic_looks_one_black_48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/step1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/lbl_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/lbl_step1"
            android:drawableLeft="@drawable/ic_looks_two_black_48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/step2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/lbl_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/lbl_step2"
            android:drawableLeft="@drawable/ic_looks_3_black_48dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/step3" />

        <Button
            android:id="@+id/btn_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:minWidth="192dp"
            android:text="Install"
            android:layout_toRightOf="@+id/lbl_step1"
            android:layout_marginLeft="32dp"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="16dp"
            android:src="@drawable/logo_long"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/shaddowLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/layout_steps"
        android:layout_alignWithParentIfMissing="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/main_content"
        android:layout_below="@+id/shaddowLine"
        android:layout_above="@+id/checkin_button"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <android.support.v7.widget.CardView

            android:id="@+id/card_view_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp"
            android:layout_weight="4"
            android:layout_marginRight="16dp" >
            <ImageView
                android:id="@+id/businessLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/peel"
                android:layout_weight="2"
                android:scaleType="centerInside"
                android:visibility="visible" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_overlay_dark_to_light"
                android:minHeight="128dp"
                android:id="@+id/gradient"
                />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_view_rewards"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            card_view:cardCornerRadius="4dp"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/title_background_color"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:text="Points &amp; Rewards"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/title_text_color"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/lst_rewards"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_qr_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            card_view:cardCornerRadius="4dp"
            android:layout_marginLeft="16dp"
            android:visibility="visible">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Have the app? Scan below"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:background="@color/title_background_color"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@drawable/aacpr"
                android:adjustViewBounds="false"
                android:id="@+id/businessQRCode"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <Button android:id="@+id/checkin_button"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:text="Tap to Check-in"
            android:textColor="@color/body_text_1_inverse"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="42dp"
            android:textSize="42sp"
            android:singleLine="true"
            android:background="@drawable/custom_btn"
            android:layout_alignParentBottom="true"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:text="@string/cannot_checkin_offline"
        android:id="@+id/offlineMessage"
        android:layout_centerHorizontal="true"
        android:textSize="42dp"
        android:gravity="center_vertical" />


</RelativeLayout>